--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
          </div>
 
         <div class="col-xs-12">Explore the initial profile of the informal settlements hosting IDPs. You can download the data <a href="data/dataviz.tsv"  target="_blank">here</a> and access the full map <a href="https://ona.io/iraqcccm/forms/baseline/map" target="_blank" >here</a>
-		<br>Data date: Novembre 2014</div>
+		<br>Data period: Novembre - December 2014 / Data released on: January 2015</div>
 
             <div class="socialmedia" data-step="9" data-intro="Share this visualisation on twitter!" data-position="left">
                 <table>
