Update of the index
add information on phase 1
add details on who is doing what

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
         <div class="col-xs-12">Explore the initial profile of the informal settlements hosting IDPs. You can download the data <a href="data/dataviz.tsv"  target="_blank">here</a> and access the full map <a href="https://ona.io/iraqcccm/forms/baseline/map" target="_blank" >here</a>
 		<br>Data period: Novembre - December 2014 / Data released on: January 2015</div>
+		<div class="col-xs-10">Phase 1 recorded 880 informal settlements. 187 informal settlements were inactives from Phase 1. In addition Phase 2 recorded 42 new informal settlements</div>
 
             <div class="socialmedia" data-step="9" data-intro="Share this visualisation on twitter!" data-position="left">
                 <table>
@@ -229,7 +230,7 @@
                     </div>
                     <div class="orgap" class="col-md-4 dc-chart" >
 
-                      <p><small>Number of sites assessed per organisation</small></p>
+                      <p><small>Number of sites assessed per organisation (based on phase 1 assessment, new sites assessed by REACH)</small></p>
                     </div>
             </div>
 
