--- a/index.html
+++ b/index.html
@@ -692,14 +692,20 @@ function drawMarkerArea(data) {
 
  var householdnums = xf.dimension(function(d) { return d.householdnum; });
  var householdnumsGroup = householdnums.group().reduceCount();
-  dc.pieChart("#cccm .householdnump",groupname)
+   
+   dc.rowChart("#cccm .householdnums",groupname)
         .dimension(householdnums)
         .group(householdnumsGroup)
         .width(115)
         .height(115)
         .renderLabel(true)
-    //    .ordering(function (p) { return -p.value; })
-        .renderTitle(true);
+        .renderTitle(true)
+        .colors(['#3182bd'])
+        .colorDomain([0,0])
+        .elasticX(true)
+        .colorAccessor(function(d, i){return 1;})
+        //.ordering(function (p) { return -p.value;})
+        .xAxis().ticks(4).tickFormat(d3.format("s"));
 
 
 //"opensite","abandonned","unfinished",
