--- a/index.html
+++ b/index.html
@@ -692,20 +692,16 @@ function drawMarkerArea(data) {
 
  var householdnums = xf.dimension(function(d) { return d.householdnum; });
  var householdnumsGroup = householdnums.group().reduceCount();
-   
-   dc.rowChart("#cccm .householdnums",groupname)
+  
+  dc.pieChart("#cccm .householdnump",groupname)
         .dimension(householdnums)
         .group(householdnumsGroup)
         .width(115)
         .height(115)
+		.height(115)
         .renderLabel(true)
-        .renderTitle(true)
-        .colors(['#3182bd'])
-        .colorDomain([0,0])
-        .elasticX(true)
-        .colorAccessor(function(d, i){return 1;})
-        //.ordering(function (p) { return -p.value;})
-        .xAxis().ticks(4).tickFormat(d3.format("s"));
+    //    .ordering(function (p) { return -p.value; })
+        .renderTitle(true);
 
 
 //"opensite","abandonned","unfinished",
