--- a/index.html
+++ b/index.html
@@ -688,20 +688,22 @@ function drawMarkerArea(data) {
         .xAxis().ticks(4).tickFormat(d3.format("s"));
 
 */
-
-
  var householdnums = xf.dimension(function(d) { return d.householdnum; });
- var householdnumsGroup = householdnums.group().reduceCount();
-  
-  dc.pieChart("#cccm .householdnump",groupname)
-        .dimension(householdnums)
+ var householdnumsGroup = householdnums.group().reduceCount(function (d) { return d.householdclass; });
+
+  dc.rowChart("#cccm .householdnump",groupname)
+        .dimension(householdnump)
         .group(householdnumsGroup)
         .width(115)
         .height(115)
-		.height(115)
         .renderLabel(true)
-    //    .ordering(function (p) { return -p.value; })
-        .renderTitle(true);
+        .renderTitle(true)
+        .colors(['#3182bd'])
+        .colorDomain([0,0])
+        .elasticX(true)
+        .colorAccessor(function(d, i){return 1;})
+        //.ordering(function (p) { return -p.value;})
+        .xAxis().ticks(4).tickFormat(d3.format("s"));
 
 
 //"opensite","abandonned","unfinished",
