--- a/index.html
+++ b/index.html
@@ -688,22 +688,20 @@ function drawMarkerArea(data) {
         .xAxis().ticks(4).tickFormat(d3.format("s"));
 
 */
- var householdnums = xf.dimension(function(d) { return d.householdnum; });
- var householdnumsGroup = householdnums.group().reduceCount(function (d) { return d.householdclass; });
 
-  dc.rowChart("#cccm .householdnump",groupname)
-        .dimension(householdnump)
+
+ var householdnums = xf.dimension(function(d) { return d.householdnum; });
+ var householdnumsGroup = householdnums.group().reduceCount();
+  
+  dc.pieChart("#cccm .householdnump",groupname)
+        .dimension(householdnums)
         .group(householdnumsGroup)
         .width(115)
         .height(115)
+		.height(115)
         .renderLabel(true)
-        .renderTitle(true)
-        .colors(['#3182bd'])
-        .colorDomain([0,0])
-        .elasticX(true)
-        .colorAccessor(function(d, i){return 1;})
-        //.ordering(function (p) { return -p.value;})
-        .xAxis().ticks(4).tickFormat(d3.format("s"));
+    //    .ordering(function (p) { return -p.value; })
+        .renderTitle(true);
 
 
 //"opensite","abandonned","unfinished",
