--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
                <img src="images/ccccm-siteasessment2.png" style="width: 100%"></a>
          </div>
 
-        <div class="col-xs-12">Explore the initial profile of the informal settlements hosting IDPs. You can download the data <a href="data/dataviz.csv"  target="_blank">here</a> and access the full map <a href="https://ona.io/iraqcccm/forms/baseline/map" target="_blank" >here</a>
+        <div class="col-xs-12">Explore the initial profile of the informal settlements hosting IDPs. You can download the data <a href="data/dataviz.tsv"  target="_blank">here</a> and access the full map <a href="https://ona.io/iraqcccm/forms/baseline/map" target="_blank" >here</a>
 		<br><p>Data period: Phase 1 & 2 October - December 2014</p>
 			<p> Phase 3 March - May 2015 </p>
 			<p> Phase 4 August - September 2015 </p>
 			<p> Data released on: October 2015</p></div>
-		<div class="col-xs-10">Phase 1 recorded 880 informal settlements. the consolidated dataset for Phase 3 and 4 recorded 1716 informal settlements</div>
+		<div class="col-xs-10">Phase 1 recorded 880 informal settlements. the consolidated dataset for Phase 3 and 4 is recording 1717 informal sites</div>
 
             <div class="socialmedia" data-step="9" data-intro="Share this visualisation on twitter!" data-position="left">
                 <table>
