--- a/index.html
+++ b/index.html
@@ -44,12 +44,9 @@
                <img src="images/ccccm-siteasessment2.png" style="width: 100%"></a>
          </div>
 
-        <div class="col-xs-12">Explore the initial profile of the informal settlements hosting IDPs. You can download the data <a href="data/dataviz.csv"  target="_blank">here</a> and access the full map <a href="https://ona.io/iraqcccm/forms/baseline/map" target="_blank" >here</a>
-		<br><p>Data period: Phase 1 & 2 October - December 2014</p>
-			<p> Phase 3 March - May 2015 </p>
-			<p> Phase 4 August - September 2015 </p>
-			<p> Data released on: October 2015</p></div>
-		<div class="col-xs-10">Phase 1 recorded 880 informal settlements. the consolidated dataset for Phase 3 and 4 recorded 1716 informal settlements</div>
+        <div class="col-xs-12">Explore the initial profile of the informal settlements hosting IDPs. You can download the data <a href="data/dataviz.tsv"  target="_blank">here</a> and access the full map <a href="https://ona.io/iraqcccm/forms/baseline/map" target="_blank" >here</a>
+		<br>Data period: Novembre - December 2014 / Data released on: January 2015</div>
+		<div class="col-xs-10">Phase 1 recorded 880 informal settlements. 187 informal settlements were inactives from Phase 1. In addition Phase 2 recorded 42 new informal settlements</div>
 
             <div class="socialmedia" data-step="9" data-intro="Share this visualisation on twitter!" data-position="left">
                 <table>
@@ -90,6 +87,11 @@
                     <div class="col-md-2" >
                         <div class="waterp" id="cccm"  class="dc-chart" >
                           <p><small>Limited access to water</small></p>
+                        </div>
+                    </div>
+                    <div class="col-md-2" >
+                        <div class="waterqp" id="cccm" class="dc-chart" >
+                          <p><small>Poor quality drinking water</small></p>
                         </div>
                     </div>
                     <div class="col-md-2" >
@@ -135,14 +137,17 @@
                     </div>
                 </div>
 
-                <div  class="col-md-2"  data-step="6" data-intro="Click on these chart to filter by site shelter composition" data-position="right">
+                <div  class="col-md-2"  data-step="6" data-intro="Click on these chart to filter by site environment or shelter composition" data-position="right">
 
 
-                 
+                        <div class="environmentp" id="cccm" class="dc-chart" >
+                          <h4>Site type</h4>
+                        <p><small><i>Direct environment</i></small></p>
+                        </div>
                        <div  class="scorep" id="cccm" class="dc-chart">
                           <h4>Composite Score</h4>
                           <p><small><i><a href="https://github.com/unhcr-iraq/cccm-assessment/blob/master/data.R"  target="_blank">
-                              (water_access + openelement + damage + mines+ hazards + fighting) ranked in 5 five classes.</a><br >Number of sites</i></small></p>
+                              (water_access + water_quality + openelement + damage + mines+ hazards + fighting) ranked in 5 five classes.</a><br >Number of sites</i></small></p>
                         </div>
                  <!--
                       -->
@@ -276,7 +281,7 @@ var numberFormat = d3.format(",f");
 
 
 
-d3.tsv("data/dataviz.csv", function(data) {
+d3.tsv("data/dataviz.tsv", function(data) {
  // drawMarkerSelect(data);
   drawMarkerArea(data);
 });
@@ -413,18 +418,36 @@ function drawMarkerArea(data) {
     //  .featureKeyAccessor(function(feature) {return feature.properties.geo; })
       .renderPopup(true)
     //  .popup(function(feature) { return feature.properties.sitear+" : "+feature.properties.neighbourhood; });
-       //sitear	neighbourhood	organisat	governorate	district	photo	phone	household	men	women	boys	girls	individual
+       //sitear	neighbourhood	organisat	governorate	district	photo	environment	phone	household	men	women	boys	girls	individual
       //.clusterObject({ maxClusterRadius: 40, disableClusteringAtZoom:10,spiderfyOnMaxZoom: false,showCoverageOnHover: false})
       .popup();
 
 
-//water_access  electric    openelement damage  hazards mines   fighting
+//water_access  water_quality   electric    openelement damage  hazards mines   fighting
 
   var waters = xf.dimension(function(d) { return d.water_access; });
   var watersGroup = waters.group().reduceCount();
   dc.pieChart("#cccm .waterp",groupname)
         .dimension(waters)
         .group(watersGroup)
+        .width(95)
+        .height(95)
+        .renderLabel(true)
+        .renderTitle(true)
+        .colors(['#cb181d', /* maj */
+                        '#fb6a4a', /* mod */
+                        '#fcae91', /* min */
+                        '#fee5d9' /* no */
+                        ])
+         .colorDomain([0,4]);
+    //   .ordering(function (p) { return -p.value; });
+
+
+  var waterqs = xf.dimension(function(d) { return d.water_quality; });
+  var waterqsGroup = waterqs.group().reduceCount();
+  dc.pieChart("#cccm .waterqp",groupname)
+        .dimension(waterqs)
+        .group(waterqsGroup)
         .width(95)
         .height(95)
         .renderLabel(true)
@@ -542,7 +565,18 @@ function drawMarkerArea(data) {
     //    .ordering(function (p) { return -p.value; });
 
 
-  
+  var environments = xf.dimension(function(d) { return d.environment; });
+  var environmentsGroup = environments.group().reduceCount();
+  dc.pieChart("#cccm .environmentp",groupname)
+        .dimension(environments)
+        .group(environmentsGroup)
+        .width(95)
+        .height(95)
+        .renderLabel(true)
+        .renderTitle(true)
+        .ordering(function (p) { return -p.value; });
+
+
   var classs = xf.dimension(function(d) { return d.class; });
   var classsGroup = classs.group().reduceCount();
   dc.rowChart("#cccm .classp",groupname)
